--- a/css/styles.css
+++ b/css/styles.css
@@ -135,26 +135,29 @@ body {
   
   display: flex;
   background-color: #E9EEF2;
-  padding: 100px;
-  padding-bottom: 30px;
+  padding: 30px 350px;
   width: 100%;
   background-color: #E9EEF2;
-
+  justify-content: space-around;
 }
 
 
 .valores .valor {
   height: 500px;
+  width: 300px;
+  margin-top: 100px;
+  
 }
 
-.valores .valor p{
+.valores .valor p {
   text-align: center;
-  margin: 5px 10rem;
-  margin-top: 40px;
+  margin: auto;
+  margin-top: 70px;
+  width: 175px;
 }
 
-.valores .valor div{
-  margin: 100px 200px;
+.valores .valor div {
+  margin: auto;
   transform: scale(1.5);
 }
 
